# nano-aha-moment

./: .gitignore  README.md  nano_r1.ipynb  nano_r1_script.py  notebook_train.py  pyproject.toml  utils.py
src/: config.py  data_utils.py  grpo_loss.py  reward_utils.py
