[project]
name = "nano-aha-moment"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "torch==2.5.1",
    "vllm==0.7.3",
    "transformers==4.48.3",
    "accelerate==1.4.0",
    "datasets==3.3.2",
    "deepspeed==0.16.4",
    "wandb==0.19.7",
    "ipykernel==6.29.5",
    "ipywidgets==8.1.7",
    "jupyter==1.1.1",
    "ipython",
    "rich",
]